--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "export NODE_OPTIONS=--openssl-legacy-provider; next dev",
+    "build": "next --openssl-legacy-provider build",
+    "start": "next --openssl-legacy-provider start"
   },
   "dependencies": {
     "next": "10.2.0",
     "next-images": "^1.7.0",
+    "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
