--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0",
   "private": true,
   "scripts": {
-    "dev": "export NODE_OPTIONS=--openssl-legacy-provider; next dev",
-    "build": "next --openssl-legacy-provider build",
-    "start": "next --openssl-legacy-provider start"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "next": "10.2.0",
