--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "next": "10.2.0",
     "next-images": "^1.7.0",
     "polished": "^4.2.2",
     "react": "17.0.2",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.7.1",
     "styled-components": "^5.3.0"
