--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.7.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
