--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.0",
+    "react-snap-carousel": "^0.3.1",
     "typescript": "^4.2.4"
   },
   "config": {
