--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "graphql-request": "^5.2.0",
     "next": "10.2.0",
     "next-images": "^1.7.0",
     "polished": "^4.2.2",
