--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "bootstrap": "^5.2.3",
+    "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
     "next": "10.2.0",
     "next-images": "^1.7.0",
