Animated for aos lib

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
