--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql-request": "^5.2.0",
     "next": "10.2.0",
     "next-images": "^1.7.0",
+    "nextjs-progressbar": "^0.0.16",
     "polished": "^4.2.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.7.2",
