--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
+    "@types/nodemailer": "^6.4.7",
     "aos": "^2.3.4",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
     "next": "10.2.0",
     "next-images": "^1.7.0",
     "nextjs-progressbar": "^0.0.16",
+    "nodemailer": "^6.9.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "polished": "^4.2.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.7.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
