feat: modife image home hero, ajustments finals

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_DATOCMS_URL=END_POINT_API
-NEXT_PUBLIC_DATOCMS_API_TOKEN=API_TOKEN
+NEXT_DATOCMS_API_TOKEN="DATOCMS_API_KEY"
+NEXT_PUBLIC_DATOCMS_URL="DATOCMS_ENDPOIT"
+MAILADRESS="EMAIL_PRIMARY"
+NEXT_SENDGRID="SENDHRID_API_KEY"
